--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@ body {
   background: #121517;
 }
 </style>
+<head>
+    <title>Team Rocket</title>
+</head>
 <body>
-<p>Hi</p>
+    <ul>
+        <li><img src="/img/1.png"></li>
+        <li><img src="/img/2.png"></li>
+    </ul>
 </body>
+
