--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 body {
   background: #121517;
 }
+
+h1 {
+	color: #FFFFFF;
+	font-family: arial;
+	text-align: center;
+}
+
+p {
+	color: #FFFFFF;
+	font-family: arial;
+	font-size: 24px;
+}
 </style>
 <head>
     <title>Team Rocket</title>
 </head>
 <body>
-    <ul>
-        <li><img src="/img/1.png"></li>
-        <li><img src="/img/2.png"></li>
-    </ul>
+	<h1>SpaceX Dragon</h1>
+	<p>
+    	Dragon is a free-flying spacecraft designed to deliver both cargo and people to orbiting destinations. Dragon made history in 2012 when it became the first commercial spacecraft in history to deliver cargo to the International Space Station and safely return cargo to Earth, a feat previously achieved only by governments. It is the only spacecraft currently flying that is capable of returning significant amounts of cargo to Earth. Currently Dragon carries cargo to space, but it was designed from the beginning to carry humans. Under an agreement with NASA, SpaceX is now developing the refinements that will enable Dragon to fly crew. Dragon's first manned test flight is expected to take place as early as 2018.
+  </p>
 </body>
 
