--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@ h1 {
 	font-family: arial;
 	text-align: center;
 }
-
 p {
+
 	color: #FFFFFF;
 	font-family: arial;
 	font-size: 24px;
+}
+img {
+    margin-left: 45%;
+    vertical-align: middle;
 }
 </style>
 <head>
@@ -22,9 +26,11 @@ p {
 	<h1>SpaceX Dragon</h1>
 	<p>
     		Dragon is a free-flying spacecraft designed to deliver both cargo and people to orbiting destinations. Dragon made history in 2012 when it became the first commercial spacecraft<br/>
-		in history to deliver cargo to the International Space Station and safely return cargo to Earth, a feat previously achieved only by governments. It is the only spacecraft currently<br/> 
-		flying that is capable of returning significant amounts of cargo to Earth. Currently Dragon carries cargo to space, but it was designed from the beginning to carry humans. Under an<br/> 
+		in history to deliver cargo to the International Space Station and safely return cargo to Earth, a feat previously achieved only by governments. It is the only spacecraft currently<br/>
+		flying that is capable of returning significant amounts of cargo to Earth. Currently Dragon carries cargo to space, but it was designed from the beginning to carry humans. Under an<br/>
 		agreement with NASA, SpaceX is now developing the refinements that will enable Dragon to fly crew. Dragon's first manned test flight is expected to take place as early as 2018.<br/>
-  	</p>
+  </p>
+<img src="img/nose-cone3.png"/><br><br>
+<img style="margin-left:42.5%" src="img/spacecraft.png"/><br>
+<img style="margin-left:24.5%" src="img/solar-seq.gif"/>
 </body>
-
